fixed on hover on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -912,6 +912,12 @@ z-index: 1;
         object-fit: cover;
         height: 153vh;
     }
+
+    /*Hides on hover on mobile devices*/
+    .img-slider .navigation .btn:hover::before,
+    .img-slider .navigation .btn:hover::after {
+    --scale: 0;
+    }
     
     .history-content h1 {
         margin-top: 5rem;
